--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
     <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
-    CONTENT UPDATE
+    <main class="container">
+        <div class="left-column">LEFT COLUMN</div>
+        <div class="right-column">RIGHT COLUMN</div>
+    </main>
 </body>
 
 </html>
