--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
 
 <body>
     <main class="container">
-        <div class="left-column">LEFT COLUMN</div>
+        <div class="left-column">
+            <h1 class="main-title">Sign up</h1>
+            <footer class="bottom-links">
+                <a class="link" href="#">Privacy policy</a>
+                <span>&amp;</span>
+                <a class="link" href="#">terms of service</a>
+            </footer>
+        </div>
         <div class="right-column">RIGHT COLUMN</div>
     </main>
 </body>
