Right column HTML structure #6

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
                 <a class="link" href="#">terms of service</a>
             </footer>
         </div>
-        <div class="right-column">RIGHT COLUMN</div>
+        <div class="right-column">
+            <div class="close">x</div>
+            <form>
+                REGISTRATION FORM
+            </form>
+        </div>
     </main>
 </body>
 
