--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="./css/form.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
@@ -29,8 +30,28 @@
         </div>
         <div class="right-column">
             <div class="close">x</div>
-            <form>
-                REGISTRATION FORM
+            <form class="form">
+                <div class="form-row">
+                    <label for="">Username</label>
+                    <input type="text" placeholder="Your username" required>
+                </div>
+                <div class="form-row">
+                    <label for="">Email</label>
+                    <input type="email" placeholder="Your email" required>
+                </div>
+                <div class="form-row">
+                    <label for="">Password</label>
+                    <input type="password" placeholder="Your password" required>
+                </div>
+                <div class="form-row">
+                    <label for="">Repeat password</label>
+                    <input type="password" placeholder="Your password" required>
+                </div>
+                <div class="form-row">
+                    <button type="submit">Get started</button>
+                    <span>or</span>
+                    <a href="#">Sign in</a>
+                </div>
             </form>
         </div>
     </main>
