--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
             <div class="close">x</div>
             <form class="form">
                 <div class="form-row">
-                    <label for="">Username</label>
-                    <input type="text" placeholder="Your username" required>
+                    <label for="username">Username</label>
+                    <input id="username" type="text" placeholder="Your username" required>
                 </div>
                 <div class="form-row">
-                    <label for="">Email</label>
-                    <input type="email" placeholder="Your email" required>
+                    <label for="email">Email</label>
+                    <input id="email" type="email" placeholder="Your email" required>
                 </div>
                 <div class="form-row">
-                    <label for="">Password</label>
-                    <input type="password" placeholder="Your password" required>
+                    <label for="pass">Password</label>
+                    <input id="pass" type="password" placeholder="Your password" required>
                 </div>
                 <div class="form-row">
-                    <label for="">Repeat password</label>
-                    <input type="password" placeholder="Your password" required>
+                    <label for="repass">Repeat password</label>
+                    <input id="repass" type="password" placeholder="Your password" required>
                 </div>
                 <div class="form-row">
                     <button type="submit">Get started</button>
