--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </footer>
         </div>
         <div class="right-column">
-            <div class="close">x</div>
+            <div class="close">+</div>
             <form class="form">
                 <div class="form-row">
                     <label for="username">Username</label>
