--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+    <div class="bg"></div>
     <main class="container">
         <div class="left-column">
             <h1 class="main-title">Sign up</h1>
