--- a/sign-in/index.html
+++ b/sign-in/index.html
@@ -6,23 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up</title>
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
-    <link rel="manifest" href="./favicon/site.webmanifest">
-    <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
+    <link rel="manifest" href="../favicon/site.webmanifest">
+    <link rel="mask-icon" href="../favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="./css/form.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/form.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
     <div class="bg"></div>
     <main class="container">
         <div class="left-column">
-            <h1 class="main-title">Sign up</h1>
+            <h1 class="main-title">Sign in</h1>
             <footer class="bottom-links">
                 <a class="link" href="#">Privacy policy</a>
                 <span>&amp;</span>
@@ -37,21 +37,13 @@
                     <input id="username" type="text" placeholder="Your username" required>
                 </div>
                 <div class="form-row">
-                    <label for="email">Email</label>
-                    <input id="email" type="email" placeholder="Your email" required>
-                </div>
-                <div class="form-row">
                     <label for="pass">Password</label>
                     <input id="pass" type="password" placeholder="Your password" required>
                 </div>
                 <div class="form-row">
-                    <label for="repass">Repeat password</label>
-                    <input id="repass" type="password" placeholder="Your password" required>
-                </div>
-                <div class="form-row">
-                    <button type="submit">Get started</button>
+                    <button type="submit">Login</button>
                     <span>or</span>
-                    <a href="./sign-in/">Sign in</a>
+                    <a href="../forgot-password/">Forgot password?</a>
                 </div>
             </form>
         </div>
